--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,19 +1,19 @@
 Package: dlnm
 Type: Package
 Title: Distributed Lag Non-linear Models
-Version: 1.0.1
-Date: 2009-09-10
+Version: 1.0.2
+Date: 2009-10-12
 Author: Antonio Gasparrini and Ben Armstrong
 Maintainer: Antonio Gasparrini <antonio.gasparrini@lshtm.ac.uk>
 Imports: stats, graphics, grDevices, splines, tsModel
-Depends: splines
-Suggest: NMMAPSlite
+Depends: stats, graphics, splines
+Suggest: mgcv, NMMAPSlite
 Description: The package dlnm contains functions to specify basis and
         cross-basis matrices in order to run distributed lag models and
         their non-linear extension, then to predict and graph the
         results for a fitted model.
 License: GPL (>= 2)
 LazyLoad: yes
-Packaged: Wed Sep 16 18:47:49 2009; ppehagas
+Packaged: Mon Oct 12 19:52:42 2009; ppehagas
 Repository: CRAN
-Date/Publication: 2009-09-18 20:24:28
+Date/Publication: 2009-10-13 15:41:00
