--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,12 @@
 Package: dlnm
 Type: Package
 Title: Distributed Lag Non-linear Models
-Version: 1.2.4
-Date: 2010-06-22
+Version: 1.3.1
+Date: 2010-01-13
 Author: Antonio Gasparrini and Ben Armstrong
 Maintainer: Antonio Gasparrini <antonio.gasparrini@lshtm.ac.uk>
 Imports: stats, graphics, grDevices, splines, tsModel
-Depends: stats, graphics, splines
+Depends: R (>= 2.8.0), stats, graphics, splines
 Suggest: mgcv, NMMAPSlite
 Description: The package dlnm contains functions to specify basis and
         cross-basis matrices in order to run distributed lag models and
@@ -14,6 +14,7 @@ Description: The package dlnm contains functions to specify basis and
         results for a fitted model.
 License: GPL (>= 2)
 LazyLoad: yes
-Packaged: 2010-06-23 16:08:22 UTC; ppehagas
+LazyData: yes
 Repository: CRAN
-Date/Publication: 2010-06-24 05:45:46
+Date/Publication: 2011-01-19 11:30:59
+Packaged: 2011-01-19 11:29:35 UTC; hornik
