--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: dlnm
 Type: Package
 Title: Distributed Lag Non-linear Models
-Version: 1.1.1
-Date: 2009-11-03
+Version: 1.2.0
+Date: 2010-03-25
 Author: Antonio Gasparrini and Ben Armstrong
 Maintainer: Antonio Gasparrini <antonio.gasparrini@lshtm.ac.uk>
 Imports: stats, graphics, grDevices, splines, tsModel
@@ -14,6 +14,6 @@ Description: The package dlnm contains functions to specify basis and
         results for a fitted model.
 License: GPL (>= 2)
 LazyLoad: yes
-Packaged: Tue Nov 3 14:25:53 2009; ppehagas
+Packaged: 2010-03-25 20:11:46 UTC; antonio
 Repository: CRAN
-Date/Publication: 2009-11-04 17:51:48
+Date/Publication: 2010-03-26 11:17:08
