--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: dlnm
 Type: Package
 Title: Distributed Lag Non-linear Models
-Version: 1.2.1
-Date: 2010-04-03
+Version: 1.2.2
+Date: 2010-04-28
 Author: Antonio Gasparrini and Ben Armstrong
 Maintainer: Antonio Gasparrini <antonio.gasparrini@lshtm.ac.uk>
 Imports: stats, graphics, grDevices, splines, tsModel
@@ -14,6 +14,6 @@ Description: The package dlnm contains functions to specify basis and
         results for a fitted model.
 License: GPL (>= 2)
 LazyLoad: yes
-Packaged: 2010-04-03 17:13:36 UTC; antonio
+Packaged: 2010-04-28 12:21:47 UTC; ppehagas
 Repository: CRAN
-Date/Publication: 2010-04-03 17:55:19
+Date/Publication: 2010-05-01 15:59:32
