--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,12 @@
 Package: dlnm
 Type: Package
 Title: Distributed Lag Non-linear Models
-Version: 1.2.2
-Date: 2010-04-28
+Version: 1.2.3
+Date: 2010-05-27
 Author: Antonio Gasparrini and Ben Armstrong
 Maintainer: Antonio Gasparrini <antonio.gasparrini@lshtm.ac.uk>
 Imports: stats, graphics, grDevices, splines, tsModel
-Depends: stats, graphics, splines
+Depends: R (>= 2.8.0), stats, graphics, splines
 Suggest: mgcv, NMMAPSlite
 Description: The package dlnm contains functions to specify basis and
         cross-basis matrices in order to run distributed lag models and
@@ -14,6 +14,6 @@ Description: The package dlnm contains functions to specify basis and
         results for a fitted model.
 License: GPL (>= 2)
 LazyLoad: yes
-Packaged: 2010-04-28 12:21:47 UTC; ppehagas
+Packaged: 2010-05-28 18:07:16 UTC; ppehagas
 Repository: CRAN
-Date/Publication: 2010-05-01 15:59:32
+Date/Publication: 2010-05-29 08:02:06
