--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(crossplot)
 #
 
 import(stats,graphics,grDevices)
+importFrom(utils,packageDescription)
 importFrom(splines,ns)
 importFrom(splines,bs)
 importFrom(tsModel,Lag)
