--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,20 +1,38 @@
 
-export(crossbasis,crosspred,mkbasis,mklagbasis)
+# currently used functions
+export(onebasis,crossbasis,crosspred,crossreduce)
 export(plot.crosspred,lines.crosspred,points.crosspred)
-export(summary.crossbasis,summary.crosspred)
+export(plot.crossreduce,lines.crossreduce,points.crossreduce)
+export(summary.onebasis,summary.crossbasis,summary.crosspred,summary.crossreduce)
+export(coef.crosspred,vcov.crosspred,coef.crossreduce,vcov.crossreduce)
+
+# old functions kept for compatibility, exported
 export(crossplot)
+export(mkbasis,mklagbasis)
 
-# documented but not exported
-#
+# internal (documented)
+# .fci,.seq,.onAttach
 
+# imported
 import(stats,graphics,grDevices)
 importFrom(utils,packageDescription)
 importFrom(splines,ns)
 importFrom(splines,bs)
 importFrom(tsModel,Lag)
 
+# methods
+S3method(summary, onebasis)
 S3method(summary, crossbasis)
 S3method(summary, crosspred)
+S3method(summary, crossreduce)
 S3method(plot, crosspred)
 S3method(lines, crosspred)
 S3method(points, crosspred)
+S3method(plot, crossreduce)
+S3method(lines, crossreduce)
+S3method(points, crossreduce)
+S3method(plot, crossreduce)
+S3method(coef, crosspred)
+S3method(vcov, crosspred)
+S3method(coef, crossreduce)
+S3method(vcov, crossreduce)
