--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,26 +1,45 @@
-
-# currently used functions
+#################
+# EXPORTED
+#################
+#
 export(onebasis,crossbasis,crosspred,crossreduce)
 export(plot.crosspred,lines.crosspred,points.crosspred)
 export(plot.crossreduce,lines.crossreduce,points.crossreduce)
 export(summary.onebasis,summary.crossbasis,summary.crosspred,summary.crossreduce)
 export(coef.crosspred,vcov.crosspred,coef.crossreduce,vcov.crossreduce)
-
+#
 # old functions kept for compatibility, exported
 export(crossplot)
 export(mkbasis,mklagbasis)
-
-# internal (documented)
-# .fci,.seq,.onAttach
-
-# imported
+#
+#################
+# NOT EXPORTED
+#################
+#
+#################
+# INTERNAL
+#################
+#
+# DOCUMENTED:
+# .fci,.seq,
+#
+# NOT DOCUMENTED:
+#.onAttach
+#
+#################
+# IMPORTED
+#################
+#
 import(stats,graphics,grDevices)
 importFrom(utils,packageDescription)
 importFrom(splines,ns)
 importFrom(splines,bs)
 importFrom(tsModel,Lag)
-
-# methods
+#
+#################
+# METHODS
+#################
+#
 S3method(summary, onebasis)
 S3method(summary, crossbasis)
 S3method(summary, crosspred)
@@ -32,6 +51,7 @@ S3method(plot, crossreduce)
 S3method(lines, crossreduce)
 S3method(points, crossreduce)
 S3method(plot, crossreduce)
+#
 S3method(coef, crosspred)
 S3method(vcov, crosspred)
 S3method(coef, crossreduce)
