--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,20 +1,18 @@
 Package: dlnm
 Type: Package
 Title: Distributed Lag Non-linear Models
-Version: 1.6.8
-Date: 2013-05-16
+Version: 2.0.3
+Date: 2013-09-10
 Author: Antonio Gasparrini and Ben Armstrong
 Maintainer: Antonio Gasparrini <antonio.gasparrini@lshtm.ac.uk>
-Imports: stats, graphics, grDevices, utils, splines
+Imports: stats, graphics, grDevices, utils, splines, nlme
 Depends: R (>= 2.8.0)
-Suggests: splines, mgcv, mvmeta
-Description: The package dlnm contains functions to specify and run
-        distributed lag linear and non-linear models.
+Suggests: mgcv, survival, lme4, gee, geepack, mvmeta
+Description: The package dlnm contains functions to specify and run distributed lag linear and non-linear models.
 URL: http://www.ag-myresearch.com/package-dlnm
 License: GPL (>= 2)
-LazyLoad: yes
 LazyData: yes
-Packaged: 2013-05-16 18:43:10 UTC; EMSUAGAS
+Packaged: 2013-09-11 07:43:19 UTC; Gaspa
 NeedsCompilation: no
 Repository: CRAN
-Date/Publication: 2013-05-16 21:50:30
+Date/Publication: 2013-09-11 11:58:41
